--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,20 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@hookform/resolvers": "^3.4.2",
     "@mui/icons-material": "^5.15.18",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.18",
     "immer": "^10.1.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
-    "use-immer": "^0.9.0"
+    "use-immer": "^0.9.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
